--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-﻿
+﻿<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Дом милый дом</title>
+    <link rel="stylesheet" href="/nosql-intro-course/assets/css/style.css?v=0a33ab4f2b1833c378ae8cf74a8db634ab6ea51e">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="/nosql-intro-course/assets/js/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="/nosql-intro-course/assets/css/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  </head>
+  <body>
+  <p style="text-align: center;">Дом милый дом</p>
+  <iframe src="pannellum/pannellum.htm#panorama=panoramas/PANO_20170608_185041.jpg" style="display: block; margin: 0 auto 0 auto; width: 800px; height: 600px;"></iframe>
+  </body>
+</html>
