--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
   <p style="text-align: center;">Дом милый дом</p>
-  <iframe src="pannellum/pannellum.htm#panorama=panoramas/PANO_20170608_185041.jpg" style="display: block; margin: 0 auto 0 auto; width: 800px; height: 600px;"></iframe>
+  <iframe src="pannellum/pannellum.htm#panorama=panoramas/PANO_20170608_185041.jpg" style="display: block; position:absolute; top: calc(10%); left: calc(10%); width: 80%; height: 80%;"></iframe>
   </body>
 </html>
